ostad-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ostad-server
  namespace: your-namespace-name
spec:
  selector:
    app: ostad-server
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
